# SPI_Example

./: .gitignore  CMakeLists.txt
src/: spidev_fdx.c  spidev_test.c
